--- a/CharactersWithoutNumber/CharactersWithoutNumber.csproj
+++ b/CharactersWithoutNumber/CharactersWithoutNumber.csproj
@@ -5,18 +5,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Models\Skills\PsychicSkill.cs" />
-    <Compile Remove="Models\Skills\PsychicTechnique.cs" />
-    <Compile Remove="Models\Skills\Skill.cs" />
+    <Compile Remove="Models\Background\**" />
+    <Compile Remove="Models\Class\**" />
+    <Compile Remove="Models\Posessions\**" />
+    <Compile Remove="Models\Skills\**" />
+    <Content Remove="Models\Background\**" />
+    <Content Remove="Models\Class\**" />
+    <Content Remove="Models\Posessions\**" />
+    <Content Remove="Models\Skills\**" />
+    <EmbeddedResource Remove="Models\Background\**" />
+    <EmbeddedResource Remove="Models\Class\**" />
+    <EmbeddedResource Remove="Models\Posessions\**" />
+    <EmbeddedResource Remove="Models\Skills\**" />
+    <None Remove="Models\Background\**" />
+    <None Remove="Models\Class\**" />
+    <None Remove="Models\Posessions\**" />
+    <None Remove="Models\Skills\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\CharacterController_Old.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Skills\" />
   </ItemGroup>
 
 </Project>
