Implemented classes for calculating level and next xp

--- a/CharactersWithoutNumber/CharactersWithoutNumber.csproj
+++ b/CharactersWithoutNumber/CharactersWithoutNumber.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\CharacterController_Old.cs" />
+    <Compile Remove="Models\AttributeBonus.cs" />
   </ItemGroup>
 
   <ItemGroup>
